crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/does_override_formatter_trailing_commas.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js special/test2.js
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["special/**"],
      "formatter": { "lineWidth": 20, "trailingCommas": "none" }
    }
  ]
}
```

## `special/test2.js`

```js
const a = [
	"loreum",
	"ipsum"
];

```

## `test.js`

```js
const a = ["loreum", "ipsum"];

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
