crates/biome_cli/tests/snapshots/main_cases_overrides_formatter/takes_last_formatter_enabled_into_account.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format test.js
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["*.js"],
      "formatter": { "enabled": false }
    },
    {
      "includes": ["*.js"],
      "formatter": { "enabled": true }
    }
  ]
}
```

## `test.js`

```js
const a = ["loreum", "ipsum"]
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - const·a·=·["loreum",·"ipsum"]
      1 │ + const·a·=·["loreum",·"ipsum"];
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
